<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?android:attr/actionBarSize">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.test.dara.NewReqActivity"
        tools:showIn="@layout/activity_new_req">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/com_facebook_profilepictureview_preset_size_normal"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/ItemImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignEnd="@+id/itemTitle"
                android:layout_alignLeft="@+id/itemTitle"
                android:layout_alignRight="@+id/itemTitle"
                android:layout_alignStart="@+id/itemTitle"
                android:contentDescription="@string/profile_img"
                app:srcCompat="@android:drawable/ic_menu_upload"
                tools:layout_alignEnd="@+id/itemTitle" />

            <TextView
                android:id="@+id/itemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="70dp"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:text="@string/img_upload"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/ItemImage"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/request_item_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/relativeLayout" />

        <ListView
            android:id="@+id/listView2"
            android:layout_width="352dp"
            android:layout_height="363dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>